added untested request handlers for auth workflow

--- a/nautilus/auth/requestHandlers/templates/base.html
+++ b/nautilus/auth/requestHandlers/templates/base.html
@@ -355,10 +355,10 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-    {% block head %}{% endblock %}
+    {% block head %}{% end %}
   </head>
   <body class="{% block bodytag %}{% endblock %}">
-    {% block body %}{% endblock %}
+    {% block body %}{% end %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
   </body>
