--- a/nautilus/auth/requestHandlers/templates/login.html
+++ b/nautilus/auth/requestHandlers/templates/login.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 
-{% block title %}Log In{% endblock %}
-{% block description %}Log into your account!{% endblock %}
-{% block bodytag %}login{% endblock %}
+{% block title %}Log In{% end %}
+{% block description %}Log into your account!{% end %}
+{% block bodytag %}login{% end %}
 
 {% block body %}
   <div class="container custom-container">
@@ -12,9 +12,9 @@
           <div class="email-password-area col-xs-12 large col-sm-12">
             <div class="header">
               <span>Log In or </span>
-              <a href="{{ url_for('auth.register') }}">Create an Account</a>
+              <a>Create an Account</a>
             </div>
-            {% with messages = get_flashed_messages() %}
+            <!-- {% with messages = get_flashed_messages() %}
               {% if messages %}
                 <div class="alert alert-danger bad-login">
                   {% for message in messages %}
@@ -22,7 +22,7 @@
                   {% endfor %}
                 </div>
               {% endif %}
-            {% endwith %}
+            {% endwith %} -->
             <form class="login-form form-horizontal" role="form" method="post">
               {{ form.hidden_tag() }}
               <div class="form-group group-email">
@@ -50,4 +50,4 @@
       </div>
     </div>
   </div>
-{% endblock %}
+{% end %}
